# axiom-firmware

./: .cirrus.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGES.md  DISCLAIMER.txt  INSTALL.md  README.md  resolv.conf
.circleci/: config.yml
Logic/Lattice/: pass.lpf
Logic/cmv_hdmi3/: axi_lite.vhd  dsp48_wrap.vhd  pin_spi_ibc.xdc  pin_spi_nab_newsfe.xdc  row_col_noise.vhd
Tools/ICSP/: icsp_dump.py  icsp_picid.py  icsp_prog.py  mxo2.py  pic_jtag_dump.py  pic_jtag_id2.py  pic_jtag_prog.py
Tools/cmv-tools/: Makefile  cmv_hist3.c  cmv_rcn3.c  cmv_reg.h  cmv_snap3.c  cmv_train3.c  mimg.c  pong.c
axiom_beta_control_daemon/: CMakeLists.txt  README  main.cpp
axiom_beta_control_daemon/API/: CMakeLists.txt  Client.h  ClientExample.cpp  RESTServer.h
axiom_beta_control_daemon/Adapter/: CMVAdapter.cpp  CMVAdapter.h  I2CAdapter.h  IAdapter.h  MemoryAdapter.h
axiom_beta_control_daemon/Connection/: Client.h  Server.h
axiom_beta_control_daemon/GoAPI/: CMakeLists.txt  RESTserver.go  client.go
axiom_beta_control_daemon/Helpers/: Helpers.h
axiom_beta_control_daemon/Schema/: axiom_daemon.fbs  axiom_daemon_generated.h
axiom_beta_control_daemon/TestGUI/: gui.html  index.html  main.js
axiom_beta_control_daemon/TestGUI/css/: content.css  menu.css  menuLower.css  menuUpper.css  style.css
axiom_beta_control_daemon/systemd/: axiom.service  axiom.socket
beta-scripts/: cmv.func  cmv_init.sh  cmv_reg.sh  gen1920_init.sh  gen_init.sh  getzi.sh  halt_manual.sh  hdmi_rectest.sh  i2c.func  i2c0.func  i2c1.func  i2c2.func  if_load.sh  kick_hdmi.sh  kick_manual.sh  led_mmc0.sh  linear_conf.sh  mat4_conf.py  mat4_conf.sh  mclr_l.sh  pac1720_info.sh  picture_snap.sh  power_on.sh  rcn_clear.py  rcn_darkframe.py  rectest2.sh  rmem_conf.sh  set_gain.sh  setup.sh  spkfan_init.sh  whitebalance.py  zynq_info.sh
boot/: README.md  boot.bif  devicetree.dtb  devicetree.dts  fsbl.elf  kernel.config  sdboot.cmd  sdboot.cmd.license  u-boot.config  u-boot.patch  uEnv.txt
boot/axiom-beta/: devicetree.dts  kernel.config  u-boot.config  uEnv.txt
boot/axiom-micro/: bitstream.bit.license  devicetree.dts  devicetree_uboot.dts  fsbl.elf  kernel.config  u-boot.config  uEnv.txt
boot/axiom-pynqz2/: board.dtsi  device-tree.mss  devicetree.dts  pcw.dtsi  system.dts  uEnv.txt  zynq-7000.dtsi
build_tools/: README.md  build_image_ubuntu.sh  dependencies.txt  full_build_ubuntu.sh
build_tools/inside/: dependencies.txt  install.sh  update.sh  update_inner.sh
build_tools/outside/: assemble_image.sh  build_bootfs.sh  build_kernel.sh  build_qemu.sh  build_rootfs.sh  build_u_boot.sh  dependencies.txt  run_qemu.expect
cmv_hdmi3/: addr_dbuf.vhd  async_div.vhd  axi3_full_pkg.vhd  axi3_lite_pkg.vhd  axi3_pkg.vhd  axi_split.vhd  axi_split4.vhd  axi_split8.vhd  bram_lut.vhd  cmv_serdes.vhd  color_matrix.vhd  enc_ctrl.vhd  enc_terc.vhd  fifo_chop.vhd  fifo_reset.vhd  minmax.vhd  overlay.vhd  par_match.vhd  pin_cmv.xdc  pin_cmv_ibc.xdc  pin_cmv_nab.xdc  pin_hdmi_north.xdc  pin_hdmi_south.xdc  pin_i2c.xdc  pin_spi_ibc_tht.xdc  pp_sync.vhd  ps7_stub.vhd  pulse_sync.vhd  reduce_pkg.vhd  reg_file.vhd  reg_mem.vhd  remap_4x4.vhd  remap_shuffle.vhd  rgb_dvid.vhd  rgb_hdmi.vhd  row_col_noise.vhd  scan_comp.vhd  scan_event.vhd  scan_pong.vhd  ser_to_par.vhd  (+5 more)
cmv_snap3/: Makefile  README.md  cmv_snap3.c
color-calibration/: calc_cam_xyz.m  calc_rgb_cam.m  main.m  match_gray_point.m  match_hues.m  match_images.m  pick_points.m  read_cr2.m  show_raw.m
docker/: Dockerfile  qemu-aarch64  qemu-arm
gateware/: README.md
gateware/Lattice/: Makefile  Makefile.1200  Makefile.2000  env.sh
gateware/cmv_hdmi3/: addr_qbuf.vhd  cmv_pll.vhd  enc_tmds.vhd  hdmi_pll.vhd  helper_pkg.vhd  pin_debug.xdc  pin_hdmi.xdc  pin_spi_nab.xdc  reg_lut.vhd  reset_sync.vhd
gateware/soc_main/: axihp_reader.vhd  cfg_lut5.vhd  cmv_spi.vhd  lvds_pll.vhd  ram_sdp_reg.vhd  reg_delay.vhd  scan_hdmi.vhd  serdes_wrap.vhd  top.vhd
gateware_firmware/: README.md
gateware_firmware/routing_east/: Makefile.1200  README.md  env.sh  synlog.tcl
gateware_firmware/soc_main/: pixel_remap.vhd  pp_reg_sync.vhd  reg_pll.vhd  reg_spi.vhd  vivado.tcl
http/: index.php
http/AxiomVision/: AxiomVision.php
http/histogram/: histogram.php
http/libraries/: cmvfe_info.sh  func.php  gamma_conf.sh  hdmi.func
http/lut/: lut.php
http/registers/: registers.php
makefiles/: README.md  docker-make.sh  docker_make.sh
makefiles/host/: assemble.mk  bootfs.mk  config.mk  docker_entry.sh  (+6 more)
mimg/: Makefile  mimg.c
peripherals/: README.md
raw2dng/: Makefile  chdk-dng.c  chdk-dng.h  raw.h  raw2dng.c
software/control_daemon/: CMakeLists.txt  README  README.md  main.cpp
software/control_daemon/API/: CMakeLists.txt  IMessageHandler.h  MessageHandler.cpp  MessageHandler.h  RESTServer.cpp  RESTServer.h
software/control_daemon/API_WS/: CMakeLists.txt  IMessageHandler.cpp  IMessageHandler.h  Main.cpp  MessageDefines.h  MessageHandler.cpp  MessageHandler.h  WSServer.cpp  WSServer.h
software/control_daemon/Adapter/: CM12000VAdapter.cpp  CMV12000Adapter.cpp  CMV12000Adapter.h  CMVAdapter.cpp  CMVAdapter.h  I2CAdapter.cpp  I2CAdapter.h  IAdapter.h  IDaemonModule.h  IImageSensorAdapter.h  MemoryAdapter.h
software/control_daemon/CLI/: CMakeLists.txt  Main.cpp
software/control_daemon/ControlGUI/: index.html
software/control_daemon/ControlGUI/css/: content.css  menu.css  style.css  toggle.css
software/control_daemon/ControlGUI/js/: main.js
software/control_daemon/Daemon/: Daemon.cpp  Daemon.h  Main.cpp
software/control_daemon/Log/: ILogger.h  JournalLogger.h
software/control_daemon/Schema/: axiom_daemon.fbs
software/control_daemon/TestGUI/: index.html
software/control_daemon/TestGUI/css/: flex_children.css  menu.css  style.css
software/control_daemon/TestGUI/js/: main.js
software/control_daemon/TestScripts/: gain.json  gain.sh
software/control_daemon/UnitTests/: CMV12000AdapterTests.cpp  CMakeLists.txt  DaemonModuleTests.cpp  DaemonTests.cpp  MessageHandlerTests.cpp
software/control_daemon/systemd/: axiom.service  install_daemon.sh
(+646 files in other folders)
